--- a/logistic-html/assets/scss/_predefine.scss
+++ b/logistic-html/assets/scss/_predefine.scss
@@ -16,9 +16,15 @@ body {
 	background-color: #fff;     
 	-moz-osx-font-smoothing: antialiased;
 	-webkit-font-smoothing: antialiased; 
-	.container {
-		max-width: 1330px;
+
+
+	&:not(.laa-home) {
+		.container {
+			max-width: 1330px;
+		}
 	}
+
+
 	.split-line {
 		overflow: hidden;
 	}
