--- a/logistic-html/assets/scss/abstracts/_variables.scss
+++ b/logistic-html/assets/scss/abstracts/_variables.scss
@@ -11,7 +11,7 @@
 	--laa-clr-pr-1: #27AAE2;
 	--laa-clr-sd-1: #F62459;
 	--laa-clr-h1: #1A2D4E;
-	--laa-clr-para-1: #222222;
+	--laa-clr-p1: #222222;
 
 }
 
