--- a/logistic-html/assets/scss/components/_button.scss
+++ b/logistic-html/assets/scss/components/_button.scss
@@ -3,6 +3,57 @@
 */
 
 /* 
+    mobile-menu-btn-1-start
+*/
+.laa-menu-btn-1 {
+    width: 25px;
+    height: 25px;
+    flex: 0 0 auto;
+    border: none;
+    outline: none;
+    background: transparent;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    align-content: center;
+    justify-content: center;
+    gap: 5px;
+    transition: all .3s ease-in-out;
+
+    span {
+        display: inline-block;
+        flex: 0 0 auto;
+        width: 5px;
+        height: 5px;
+        background: var(--laa-clr-h1);
+        border-radius: 50%;
+        transition: all .3s ease-in-out;
+    }
+
+    &:hover {
+        background: var(--fx-clr-sd-1);
+        span {
+            background-color: var(--laa-clr-sd-1);
+            &:nth-child(1) {
+                transform: translate(10px, 0px);
+            }
+
+            &:nth-child(3) {
+                transform: translate(0px, 10px);
+            }
+
+            &:nth-child(7) {
+                transform: translate(0px, -10px);
+            }
+
+            &:nth-child(9) {
+                transform: translate(-10px, 0px);
+            }
+        }
+    }
+}
+
+/* 
     laa-search-btn
 */
 .laa-search-btn {
@@ -37,7 +88,6 @@
         }
     }
 }
-
 
 
 /* 
@@ -139,105 +189,26 @@
         
 }
   
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-    mobile-menu-btn-1-start
-*/
-.fx-menu-btn-1 {
-    width: 80px;
-    height: 80px;
-    flex: 0 0 auto;
-    background: var(--fx-clr-pr-1);
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto;
-    align-content: center;
-    justify-content: center;
-    gap: 5px;
-    transition: all .5s var(--cube-1);
-
-    span {
-        display: inline-block;
-        flex: 0 0 auto;
-        width: 5px;
-        height: 5px;
-        background: #fff;
-        border-radius: 50%;
-        transition: all .5s var(--cube-1);
-    }
-
-    &:hover {
-        background: var(--fx-clr-sd-1);
-        span {
-            &:nth-child(1) {
-                transform: translate(-5px, -5px);
-            }
-            &:nth-child(2) {
-                transform: translate(0px, -5px);
-            }
-            &:nth-child(3) {
-                transform: translate(5px, -5px);
-            }
-            &:nth-child(4) {
-                transform: translate(-5px, 0px);
-            }
-            &:nth-child(6) {
-                transform: translate(5px, 0px);
-            }
-            &:nth-child(7) {
-                transform: translate(-5px, 5px);
-            }
-            &:nth-child(8) {
-                transform: translate(0px, 5px);
-            }
-            &:nth-child(9) {
-                transform: translate(5px, 5px);
-            }
-        }
-    }
-}
-
-/* 
-    mobile-menu-btn-1-end 
-*/
 
 /* 
     pr-btn-1-start
 */
-.fx-pr-btn-1 {
-    display: inline-block;
+.laa-pr-btn-1 {
+    display: inline-flex;
     flex: 0 0 auto;
-    font-family: var(--fx-font-pr-1);
+    gap: 34px;
+    align-items: center;
+    font-family: var(--laa-h-font-1);
     text-transform: capitalize;
     font-size: 16px;
     line-height: 1;
-    background: var(--fx-clr-pr-1);
+    background: var(--laa-clr-h1);
     color: #fff;
-    padding: 19px 27px;
-    border-radius: 8px;
-    font-weight: 500;
-    transition: all .5s var(--cube-1);
-
-    i {
-        margin-left: 10px;
-    }
+    padding: 4px;
+    padding-left: 22px;
+    border-radius: 16px;
+    font-weight: 600;
+    transition: all .3s ease-in-out;
 
     .text {
         position: relative;
@@ -252,7 +223,7 @@
             opacity: 0;
             width: 100%;
             display: block;
-            transition: all 0.5s var(--cube-1);
+            transition: all 0.3s ease-in-out;
             position: absolute;
             content: attr(data-back);
             transform: translateY(100%);
@@ -263,15 +234,41 @@
             left: 0;
             opacity: 1;
             display: block;
-            transition: 0.5s;
+            transition: all 0.3s ease-in-out;
             position: relative;
             content: attr(data-front);
             transform: translateY(0);
         }
     }
 
+    .icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #fff;
+        color: var(--laa-clr-h1);
+        flex: 0 0 auto;
+        border-radius: 12px;
+        width: 48px;
+        height: 48px;
+        position: relative;
+        z-index: 1;
+        overflow: hidden;
+
+        i {
+            left: 50%;
+            top: 50%;
+            transform: translate(-50% , -50%);
+            position: absolute;
+            transition: .3s ease-in-out;
+
+            &:nth-child(1) {
+                left: -20%;
+            }
+        }
+    }
+
     &:hover {
-        background: #000;
         color: #fff;
 
         .text {
@@ -284,168 +281,42 @@
                 transform: translateY(-240%);
             }
         }
-    }
 
-    &:is(.has-hover-white) {
-        .text {
-            &::after {
-                color: var(--fx-clr-pr-1);
-            }
-            &::before {
-                color: #fff;
-            }
-        }
-        &:hover {
-            background: #fff;
-            color: var(--fx-clr-pr-1);
-        }
-    }
-
-    &:is(.has-hover-border) {
-        border: 2px solid transparent;
-
-        .text {
-            &::after {
-                color: var(--fx-clr-pr-1);
-            }
-        }
-        &:hover {
-            background: transparent;
-            border-color: var(--fx-clr-pr-1);
-        }
-    }
-
-    &:is(.has-white-bg) {
-        background: #fff;
-        border: 2px solid transparent;
-        padding: 17px 27px;
-
-        .text {
-            &::before {
-                color: var(--fx-clr-pr-1);
-            }
-            &::after {
-                color: #fff;
-            }
-        }
-
-        &:hover {
-            background: transparent;
-            border-color: #fff;
-        }
-    }
-
-    &:is(.has-clip) {
-        border-radius: 0;
-        padding: 19px 31px;
-        clip-path: polygon(10% 0, 100% 0, 100% 65%, 90% 100%, 0 100%, 0 0);
-
-        .text {
-            &::after {
-                color: var(--fx-clr-pr-1);
-            }
-        }
-
-        &:hover {
-            background: #fff;
-            clip-path: polygon(10% 0, 100% 0, 100% 65%, 90% 100%, 0 100%, 0 35%);
-        }
-
-        &:is(.has-hover-black) {
-
-            .text {
-                &::after {
-                    color: #fff;
-                }
-
-            }
-            &:hover {
-                background: #000;
-            }
-        }
-    }
-
-    &:is(.has-btn-5) {
-        background: var(--fx-clr-pr-2);
-
-        .text {
-            &::before {
-                color: #000;
-            }
-            &::after {
-                color: #fff;
-            }
-        }
-
-        i {
-            color: #000;
-        }
-
-        &:hover {
-            background: #000;
-
+        .icon {
             i {
-                color: #fff;
-            }
-        }
-
-        &:is(.hover-white) {
-
-            .text {
-                &::after {
-                    color: var(--fx-clr-pr-2);
+                &:nth-child(1) {
+                    left: 50%;
                 }
-            }
-
-            &:hover {
-                background: #fff;
-
-                i {
-                    color: var(--fx-clr-pr-2);
-                }
-       
-            }
-        }
-    }
-
-    &:is(.has-h6) {
-        background: var(--fx-clr-pr-2);
-
-        .text {
-            &::before {
-                color: #000;
-            }
-        }
-
-        i {
-            color: #000;
-        }
-
-        &:hover {
-            background: #000;
-
-            i {
-                color: #fff;
-            }
-        }
-
-        &:is(.hover-white) {
-
-            .text {
-                &::after {
-                    color: #000;
-                }
-            }
-            &:hover {
-                background: #fff;
-
-                i {
-                    color: #000;
+                &:nth-child(2) {
+                    left: 110%;
                 }
             }
         }
     }
-}
+
+}  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+    mobile-menu-btn-1-end 
+*/
+
 /* 
     pr-btn-1-end
 */
