--- a/logistic-html/assets/scss/components/_components.scss
+++ b/logistic-html/assets/scss/components/_components.scss
@@ -2,6 +2,179 @@
     components-start
 */
 
+
+// .laa-home {
+//     position: relative;
+
+//     &::after {
+//         content: "";
+//         width: 100%;
+//         height: 100vh;
+//         background-image: url(../imgs/bg/body-bg2.png);
+//         background-attachment: fixed;
+//         top: 0;
+//         left: 0;
+//         background-size: cover;
+//         background-repeat: no-repeat;
+//         position: absolute;
+//         background-position: center center;
+//     }
+// }
+
+.laa-scn-margin {
+    margin-left: 20px;
+    margin-right: 20px;
+
+    @media #{$xs} {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+
+
+.laa-hero-1-slider-btn {
+    position: absolute;
+    bottom: 4px;
+    width: 100%;
+    left: 0px;
+    z-index: 1;
+}
+
+.laa-left-btn {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 72px;
+    height: 72px;
+    flex:  0 0 auto;
+    background: rgb(255 255 255 / 20%);
+    border-radius: 8px;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    color: rgb(255 255 255 / 32%);
+    font-size: 25px;
+    position: relative;
+    z-index: 1;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+
+    @media #{$md,$xs} {
+        width: 50px;
+        height: 50px;
+    }
+
+    svg {
+        width: 35px;
+        height: 35px;
+        opacity: 32%;
+        transition: .3s ease-in-out;
+
+        path {
+            transition: .3s ease-in-out;
+            stroke: #fff;
+        }
+    }
+
+    .line {
+        position: absolute;
+        display: inline-block;
+        width: 0px;
+        height: 3px;
+        transition: 0.3s ease-in-out;
+        top: 48%;
+        left: 50%;
+        transform: translate(-50% , -50%);
+        background-color: rgb(255 255 255 / 32%);
+        transform-origin: left;
+        border-radius: 3px;
+    }
+
+    &:hover {
+        background: rgb(255 255 255 / 80%);
+        svg {
+            transform: translateX(-5.5px);
+            opacity: 100%;
+            path {
+                stroke: var(--laa-clr-h1);
+            }
+        }
+        .line {
+            width: 25px;
+            left: 55%;
+            background: var(--laa-clr-h1);
+        }
+    }
+}
+
+.laa-right-btn {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 72px;
+    height: 72px;
+    flex:  0 0 auto;
+    background: rgb(255 255 255 / 20%);
+    border-radius: 8px;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    color: rgb(255 255 255 / 32%);
+    font-size: 25px;
+    position: relative;
+    z-index: 1;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+
+    @media #{$md,$xs} {
+        width: 50px;
+        height: 50px;
+    }
+
+    svg {
+        width: 35px;
+        height: 35px;
+        opacity: 32%;
+        transition: .3s ease-in-out;
+
+        path {
+            transition: .3s ease-in-out;
+            stroke: #fff;
+        }
+    }
+
+    .line {
+        position: absolute;
+        display: inline-block;
+        width: 0px;
+        height: 3px;
+        transition: 0.3s ease-in-out;
+        top: 48%;
+        left: 50%;
+        transform: translate(-50% , -50%);
+        background-color: rgb(255 255 255 / 32%);
+        transform-origin: right;
+        border-radius: 3px;
+    }
+
+    &:hover {
+        background: rgb(255 255 255 / 80%);
+        svg {
+            transform: translateX(5.5px);
+            opacity: 100%;
+            path {
+                stroke: var(--laa-clr-h1);
+            }
+        }
+        .line {
+            width: 25px;
+            left: 45%;
+            background: var(--laa-clr-h1);
+        }
+    }
+}
+
+
+
 /* 
     contact-list-start
 */
