--- a/logistic-html/assets/scss/components/_header.scss
+++ b/logistic-html/assets/scss/components/_header.scss
@@ -1,15 +1,19 @@
 /* 
     laa-header-start
 */
+
+
+
 .laa-header-1 {
-    &-area {
-        margin-left: 20px;
-        margin-right: 20px;
-    }
+
 
     &-top {
         background: var(--laa-clr-h1);
         border-radius: 0 0 15px 16px;
+
+        @media #{$xs} {
+            display: none;
+        }
 
         &-flex {
             gap: 20px;
@@ -23,6 +27,10 @@
             display: flex;
             align-items: center;
 
+            @media #{$md,$xs} {
+                flex-wrap: wrap;
+            }
+
             li {
                 font-size: 14px;
                 color: #fff;
@@ -32,8 +40,16 @@
                 border-right: 1px solid rgb(255 255 255 / 24%);
                 padding: 7px 20px;
 
+                @media #{$md,$xs} {
+                    padding: 7px 10px;
+                    border-color: transparent;
+                }
+
                 &:nth-child(1) {
                     border-left: 1px solid rgb(255 255 255 / 24%);
+                    @media #{$md,$xs} {
+                        border-color: transparent;
+                    }
                 }
 
                 a {
@@ -49,10 +65,211 @@
                 }
             }
         }
+
+        .laa-search-btn {
+            @media #{$lg,$md,$xs} {
+                display: none;
+            }
+        }
+    }
+    
+    &-main {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 48px;
+
+        @media #{$md,$xs} {
+            padding: 15px 0;
+        }
+
+        &-logo {
+            display: inline-block;
+            flex: 0 0 auto;
+            max-width: 220px;
+            width: 100%;
+        }
+
+        &-action-link {
+            gap: 24px;
+
+            .laa-pr-btn-1 {
+                @media #{$lg} {
+                    display: none;
+                }
+                @media #{$xs} {
+                    display: none;
+                }
+                @media #{$sm} {
+                    display: inline-flex;
+                }
+            }
+        }
     }
     
 }
 
+
+
+.laa-main-navigation {
+    .navbar-nav {
+      display: inherit;
+      li {
+        display: inline-block;
+        position: relative;
+  
+        &:not(:last-child) {
+            margin-right: 27px;
+  
+            @media #{$xl,$lg} {
+                margin-right: 15px;
+            }
+        }
+        
+        &:is(.dropdown) {
+          > a {
+            padding-right: 17px;
+            &::before {
+              content: "\f067";
+              font-family: "Font Awesome 5 Pro";
+              font-weight: 600;
+              position: absolute;
+              font-size: 12px;
+              right: 0;
+              top: 49%;
+              transform: translateY(-50%);
+              transition: 400ms ease-in-out;
+            }
+          }
+
+          &:hover {
+            > a {
+                &::before {
+                    transform: translateY(-50%) rotate(360deg);
+                    content: "\f068";
+                }
+            }
+
+          }
+        }
+  
+        a {
+          position: relative;
+          z-index: 1;
+          font-family: var(--laa-h-font-1);
+          font-size: 17px;
+          font-weight: 500;
+          text-decoration: none;
+          color: var(--laa-clr-h1);
+          padding: 41px 0;
+          display: inline-block;
+          text-transform: capitalize;
+          line-height: 1;
+          transition: all .2s ease-in-out;
+  
+          &:is(.is-active) {
+            color: var(--laa-clr-sd-1);
+
+            &::before {
+                transform: translateY(-50%) rotate(360deg);
+                content: "\f068";
+            }
+          }
+        }
+
+        &:hover {
+            > a {
+              color: var(--laa-clr-sd-1);
+              transform: translateY(3px);
+
+            }
+            .dropdown-menu {
+              opacity: 1;
+              visibility: visible;
+              transform: translateY(0px) translateZ(0);
+            }
+        }
+  
+        .dropdown-menu {
+          left: 0;
+          top: 100%;
+          z-index: 100;
+          margin: 0px;
+          padding: 20px 0px;
+          height: auto;
+          min-width: 250px;
+          display: block;
+          border: none;
+          border-top: 2px solid var(--laa-clr-sd-1);
+          box-shadow: 0 10px 50px 0 rgb(0 0 0 / 5%);
+          border-radius: 0;
+          position: absolute;
+          background: rgb(255 255 255 / 80%);
+          backdrop-filter: blur(3px);
+          -webkit-backdrop-filter: blur(3px);
+          border-radius: 2px;
+          text-align: left;
+          opacity: 0;
+          visibility: hidden;
+          transform: translateY(15px) translateZ(0);
+          transition: opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+          
+          li {
+            display: block;
+            margin: 0;
+            position: relative;
+  
+            a {
+              width: 100%;
+              display: block;
+              padding: 10px 20px;
+              font-size: 16px;
+
+              &:is(.is-active) {
+                &::before {
+                    display: none;
+                }
+              }
+            }
+  
+            &:is(.dropdown) {
+              > a {
+                &::before {
+                  right: 20px;
+                  top: 49%;
+                }
+              }
+            }
+  
+            .dropdown-menu {
+              top: 0;
+              left: 100%;
+              min-width: 250px;
+              opacity: 0;
+              visibility: hidden;
+              transform: translateY(15px) translateZ(0);
+              transition: opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), visibility 0.4s cubic-bezier(0.19, 1, 0.22, 1), transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+  
+            }
+  
+            &:hover {
+              > a {
+                transform: translateX(5px);
+                
+              }
+              .dropdown-menu {
+                opacity: 1;
+                visibility: visible;
+                transform: translateY(0px) translateZ(0);
+              }
+            }
+          }
+        }
+
+      }
+    }
+}
+  
 
 /* 
     laa-header-end
