--- a/logistic-html/assets/scss/components/_title.scss
+++ b/logistic-html/assets/scss/components/_title.scss
@@ -4,10 +4,11 @@
     heading-paragraph-css-start
 */
 
-.fx-heading-1 {
-    font-family: var(--fx-font-pr-1);
-    color: #000;
+.laa-heading-1 {
+    font-family: var(--laa-h-font-1);
+    color: var(--laa-clr-h1);
     text-transform: capitalize;
+    line-height: 1.3;
     margin-bottom: 0px;
 
     &:is(.has-clr-white) {
@@ -15,115 +16,41 @@
     }
 }
 
-.fx-heading-2 {
-    font-family: var(--fx-font-pr-2);
-    color: #000;
-    text-transform: capitalize;
-    margin-bottom: 0px;
 
-    &:is(.has-clr-white) {
-        color: #fff;
-    }
-}
-
-.fx-para-1 {
-    font-family: var(--fx-font-pr-1);
+.laa-para-1 {
+    font-family: var(--laa-h-font-1);
     font-weight: 400;
     line-height: 28px;
     font-size: 18px;
-    color: #000;
+    color: var(--laa-clr-p1);
     margin-bottom: 0px;
 
     &:is(.has-clr-white) {
         color: #fff;
     }
-
-    &:is(.has-opacity-7) {
-        opacity: .72;
-    }
-
-    &:is(.has-opacity-8) {
-        opacity: 80%;
-    }
 }
 
-
-.fx-subtitle-1 {
-    display: inline-flex;
-    align-items: center;
-    gap: 10px 40px;
-    font-family: var(--fx-font-pr-1);
-    color: #000;
+.laa-subtitle-1 {
+    font-family: var(--laa-h-font-1);
+    font-weight: 500;
+    color: var(--laa-clr-h1);
+    background: var(--laa-clr-pr-1);
+    display: inline-block;
     line-height: 1;
-    margin-bottom: 0;
-    opacity: 64%;
-    margin-bottom: 20px;
-    font-weight: 400;
-
-    &:is(.has-clr-white) {
-        color: #fff;
-    }
-
-    &:is(.has-mb-28) {
-        margin-bottom: 28px;
-    }
+    font-size: 16px;
+    border-radius: 4px;
+    padding: 5px 12px;
+    margin-bottom: 18px;
 }
 
-
-.fx-scn-title-1 {
-    font-family: var(--fx-font-pr-1);
-    text-transform: uppercase;
-    font-size: 45px;
-    font-weight: 600;
-    color: #000;
-    letter-spacing: -1px;
-    line-height: 1.088;
-    margin-bottom: 0;
-
-    .pr-clr {
-        color: var(--fx-clr-pr-2);
-    }
-
-    &:is(.has-clr-white) {
-        color: #fff;
-    }
-
-    @media #{$lg} {
-        font-size: 40px;
-    }
-
-    @media #{$md} {
-        font-size: 35px;
-        letter-spacing: -1px;
-    }
-
-    @media #{$xs} {
-        font-size: 26px;
-        letter-spacing: 0px;
-    }
-
-    @media #{$sm} {
-        font-size: 30px;
-    }
-}
-
-.fx-scn-title-2 {
-    font-family: var(--fx-font-pr-2);
-    text-transform: uppercase;
+.laa-scn-title-1 {
+    font-family: var(--laa-h-font-1);
+    font-weight: 700;
+    color: var(--laa-clr-h1);
+    line-height: 1.09;
     font-size: 64px;
-    font-weight: 600;
-    color: #000;
-    letter-spacing: -1px;
-    line-height: 0.796;
+    // letter-spacing: -2px;
     margin-bottom: 0;
-
-    .pr-clr {
-        color: var(--fx-clr-pr-2);
-    }
-
-    &:is(.has-clr-white) {
-        color: #fff;
-    }
 
     @media #{$lg} {
         font-size: 56px;
@@ -141,48 +68,6 @@
 
     @media #{$sm} {
         font-size: 45px;
-        letter-spacing: 0px;
-    }
-}
-
-.fx-scn-title-3 {
-    font-family: var(--fx-font-pr-2);
-    text-transform: uppercase;
-    font-size: 90px;
-    font-weight: 600;
-    color: #000;
-    letter-spacing: -2px;
-    line-height: 0.766;
-    margin-bottom: 0;
-
-    .pr-clr {
-        color: var(--fx-clr-pr-2);
-    }
-
-    &:is(.has-clr-white) {
-        color: #fff;
-    }
-
-    @media #{$xl} {
-        font-size: 80px;
-    }
-
-    @media #{$lg} {
-        font-size: 65px;
-    }
-
-    @media #{$md} {
-        font-size: 50px;
-        letter-spacing: 0px;
-    }
-
-    @media #{$xs} {
-        font-size: 30px;
-        letter-spacing: 0px;
-    }
-
-    @media #{$sm} {
-        font-size: 40px;
         letter-spacing: 0px;
     }
 }
