--- a/logistic-html/assets/scss/main.scss
+++ b/logistic-html/assets/scss/main.scss
@@ -7,6 +7,8 @@
 @import  './components/button';
 @import  './components/title';
 @import  './components/header';
+@import  './components/hero';
+@import  './components/services';
 /* 
     laa-css-end
 */
