--- a/logistic-html/assets/scss/abstracts/_variables.scss
+++ b/logistic-html/assets/scss/abstracts/_variables.scss
@@ -13,6 +13,8 @@
 	--laa-clr-h1: #1A2D4E;
 	--laa-clr-p1: #222222;
 
+
+	--laa-cube-1:  cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 /* Responsive Variables start */
