--- a/logistic-html/assets/scss/components/_services.scss
+++ b/logistic-html/assets/scss/components/_services.scss
@@ -37,11 +37,11 @@
             .item-title {
                 font-size: 32px;
                 line-height: 1.25;
-                transition: .2s ease ;
+                transition: all .5s  var(--laa-cube-1);
                 margin-bottom: 32px;
                 
                 a {
-                    // transition: .2s ease-in ;
+                    transition: all .5s  var(--laa-cube-1);
                 }
 
                 span {
@@ -111,7 +111,7 @@
                 transform: translateY(30%);
                 display: block;
                 opacity: 0;
-                transition: .5s ease-in;
+                transition: all 1s  var(--laa-cube-1);
                 transition-delay: 0s;
             }
         }
@@ -130,14 +130,14 @@
                                 }
 
                                 &:nth-child(2) {
-                                    transition-delay: .6s;
+                                    transition-delay: .7s;
                                 }
 
                                 &:nth-child(3) {
-                                    transition-delay: .7s;
+                                    transition-delay: .9s;
                                 }
                                 &:nth-child(5) {
-                                    transition-delay: .8s;
+                                    transition-delay: 1s;
                                 }
                             }
                         }
