--- a/logistic-html/assets/scss/components/_hero.scss
+++ b/logistic-html/assets/scss/components/_hero.scss
@@ -133,7 +133,7 @@
                 border: 2px solid rgb(255 255 255 / 12%);
                 color: rgb(255 255 255 / 64%);
                 background: var(--laa-clr-h1);
-                transition: .3s ease-in-out;
+                transition: all .5s  var(--laa-cube-1);
                 font-size: 16px;
             }
 
@@ -143,7 +143,7 @@
                 span {
                     display: inline-block;
                     transform: translateX(-125%);
-                    transition: .3s ease-in-out;
+                    transition: all .5s  var(--laa-cube-1);
                 }
 
             }
