--- a/logistic-html/assets/scss/main.scss
+++ b/logistic-html/assets/scss/main.scss
@@ -9,6 +9,10 @@
 @import  './components/header';
 @import  './components/hero';
 @import  './components/services';
+@import  './components/client';
+@import  './components/about';
+@import  './components/counter';
+@import  './components/form';
 /* 
     laa-css-end
 */
