--- a/logistic-html/assets/scss/components/_components.scss
+++ b/logistic-html/assets/scss/components/_components.scss
@@ -32,15 +32,6 @@
 }
 
 
-
-.laa-hero-1-slider-btn {
-    position: absolute;
-    bottom: 4px;
-    width: 100%;
-    left: 0px;
-    z-index: 1;
-}
-
 .laa-left-btn {
     display: inline-flex;
     justify-content: center;
@@ -56,7 +47,7 @@
     font-size: 25px;
     position: relative;
     z-index: 1;
-    transition: .3s ease-in-out;
+    transition: .5s var(--laa-cube-1);
     cursor: pointer;
 
     @media #{$md,$xs} {
@@ -68,10 +59,10 @@
         width: 35px;
         height: 35px;
         opacity: 32%;
-        transition: .3s ease-in-out;
+        transition: .5s var(--laa-cube-1);
 
         path {
-            transition: .3s ease-in-out;
+            transition: .5s var(--laa-cube-1);
             stroke: #fff;
         }
     }
@@ -122,7 +113,7 @@
     font-size: 25px;
     position: relative;
     z-index: 1;
-    transition: .3s ease-in-out;
+    transition: .5s var(--laa-cube-1);
     cursor: pointer;
 
     @media #{$md,$xs} {
@@ -134,10 +125,10 @@
         width: 35px;
         height: 35px;
         opacity: 32%;
-        transition: .3s ease-in-out;
+        transition: .5s var(--laa-cube-1);
 
         path {
-            transition: .3s ease-in-out;
+            transition: .5s var(--laa-cube-1);
             stroke: #fff;
         }
     }
@@ -147,7 +138,7 @@
         display: inline-block;
         width: 0px;
         height: 3px;
-        transition: 0.3s ease-in-out;
+        transition: .5s var(--laa-cube-1);
         top: 48%;
         left: 50%;
         transform: translate(-50% , -50%);
@@ -172,6 +163,126 @@
         }
     }
 }
+
+
+.laa-left-btn-2 {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    flex:  0 0 auto;
+    background: rgb(255 255 255 / 40%);
+    border-radius: 50%;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    position: relative;
+    z-index: 1;
+    transition: .5s var(--laa-cube-1);
+    cursor: pointer;
+
+    @media #{$md,$xs} {
+        width: 50px;
+        height: 50px;
+    }
+
+    svg {
+        opacity: 50%;
+        transition: .5s var(--laa-cube-1);
+
+        path {
+            transition: .5s var(--laa-cube-1);
+        }
+    }
+
+    .line {
+        position: absolute;
+        display: inline-block;
+        width: 0px;
+        height: 2px;
+        transition: 0.3s ease-in-out;
+        top: 49%;
+        left: 45%;
+        transform: translate(-50% , -50%);
+        background-color: rgb(255 255 255 / 32%);
+        transform-origin: left;
+        border-radius: 3px;
+    }
+
+    &:hover {
+        background: rgb(255 255 255 / 100%);
+        svg {
+            transform: translateX(-5.5px);
+            opacity: 100%;
+
+        }
+        .line {
+            width: 17px;
+            left: 55%;
+            background: var(--laa-clr-sd-1);
+        }
+    }
+}
+
+.laa-right-btn-2 {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    flex:  0 0 auto;
+    background: rgb(255 255 255 / 40%);
+    border-radius: 50%;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    position: relative;
+    z-index: 1;
+    transition: .5s var(--laa-cube-1);
+    cursor: pointer;
+
+    @media #{$md,$xs} {
+        width: 50px;
+        height: 50px;
+    }
+
+    svg {
+        opacity: 50%;
+        transition: .5s var(--laa-cube-1);
+
+        path {
+            transition: .5s var(--laa-cube-1);
+        }
+    }
+
+    .line {
+        position: absolute;
+        display: inline-block;
+        width: 0px;
+        height: 2px;
+        transition: 0.3s ease-in-out;
+        top: 49%;
+        left: 55%;
+        transform: translate(-50% , -50%);
+        background-color: rgb(255 255 255 / 32%);
+        transform-origin: right;
+        border-radius: 3px;
+    }
+
+    &:hover {
+        background: rgb(255 255 255 / 100%);
+        svg {
+            transform: translateX(5.5px);
+            opacity: 100%;
+
+        }
+        .line {
+            width: 17px;
+            left: 45%;
+            background: var(--laa-clr-sd-1);
+        }
+    }
+}
+
 
 
 
