--- a/logistic-html/assets/scss/components/_title.scss
+++ b/logistic-html/assets/scss/components/_title.scss
@@ -52,12 +52,24 @@
     // letter-spacing: -2px;
     margin-bottom: 0;
 
-    @media #{$lg} {
+    .pr-clr {
+        color: var(--laa-clr-sd-1);
+    }
+
+    @media #{$xxl} {
+        font-size: 60px;
+    }
+
+    @media #{$xl} {
         font-size: 56px;
     }
 
+    @media #{$lg} {
+        font-size: 50px;
+    }
+
     @media #{$md} {
-        font-size: 48px;
+        font-size: 44px;
         letter-spacing: 0px;
     }
 
@@ -67,7 +79,7 @@
     }
 
     @media #{$sm} {
-        font-size: 45px;
+        font-size: 38px;
         letter-spacing: 0px;
     }
 }
