--- a/logistic-html/assets/scss/components/_hero.scss
+++ b/logistic-html/assets/scss/components/_hero.scss
@@ -61,12 +61,24 @@
                     @media #{$lg} {
                         font-size: 55px;
                     }
+
+                    .split-line {
+                        transform: translateX(100%);
+                        transition: all 1.5s var(--laa-cube-1);
+                        transition-delay: 0s;
+                    }
                 }
 
                 .hero-disc {
                     color: #fff;
                     margin-bottom: 32px;
                     opacity: 88%;
+                }
+
+                .heroslideright {
+                    transform: translateX(100%);
+                    transition: all 1.5s var(--laa-cube-1);
+                    transition-delay: .5s;
                 }
             }
         }
@@ -86,6 +98,62 @@
             width: 100%;
             left: 0px;
             z-index: 1;
+        }
+
+
+        .swiper-container {
+            .swiper-wrapper {
+                .swiper-slide {
+                    &:is(.swiper-slide-active) {
+                        .laa-hero-1-slider-item-content .hero-title .split-line {
+                            transform: translateX(0%);
+                            transition-delay: 1s;
+
+                            &:nth-child(2) {
+                                transition-delay: 1.3s;
+                            }
+
+                            &:nth-child(3) {
+                                transition-delay: 1.6s;
+                            }
+
+                        }
+                        .laa-hero-1-slider-item {
+                            .heroslideright {
+                                transform: translateX(0%);
+                                transition-delay: .7s;
+
+                                &:nth-child(3) {
+                                    transition-delay: 1.6s;
+                                }
+
+                                &:nth-child(4) {
+                                    transition-delay: 1.9s;
+                                }
+                            }
+
+                            
+                        }
+
+                        .laa-hero-1-slider-item-bg {
+                            .laa-ani-box-1 , .laa-ani-box-2, .laa-ani-box-3, .laa-ani-box-4 {
+                                transform: rotateY(0deg);
+                                transform: rotateX(0deg);
+                                transition-delay: 1s;
+                            }
+                            .laa-ani-box-2 {
+                                transition-delay: 1.5s;
+                            }
+                            .laa-ani-box-3 {
+                                transition-delay: 2s;
+                            }
+                            .laa-ani-box-4 {
+                                transition-delay: 2.5s;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 
@@ -170,6 +238,31 @@
             }
         }
     }
+    
+}
+
+.laa-ani-box {
+    perspective: 2000px;
+    transform-style: preserve-3d;
+
+    &-1 {
+        transform: rotateY(90deg);
+        transition: all 1s var(--laa-cube-1);
+    }
+    &-2 {
+        transform: rotateY(90deg);
+        transition: all 1s var(--laa-cube-1);
+    }
+    &-3 {
+        transform: rotateY(90deg);
+        transition: all 1s var(--laa-cube-1);
+    }
+    &-4 {
+        transform: rotateX(-90deg);
+        transition: all 1s var(--laa-cube-1);
+        transform-origin: bottom;
+    }
+    
     
 }
 
