--- a/logistic-html/assets/scss/main.scss
+++ b/logistic-html/assets/scss/main.scss
@@ -13,6 +13,10 @@
 @import  './components/about';
 @import  './components/counter';
 @import  './components/form';
+@import  './components/blog';
+@import  './components/animate';
+@import  './components/text-slide';
+@import  './components/features';
 /* 
     laa-css-end
 */
