--- a/logistic-html/assets/scss/components/_about.scss
+++ b/logistic-html/assets/scss/components/_about.scss
@@ -13,6 +13,12 @@
         }
     }
 
+    &-scn-title {
+        .laa-para-1 {
+            font-weight: 400;
+        }
+    }
+
     &-content {
         max-width: 710px;
 
